adding message query & subscription on the client side

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,13 @@
   padding: 0;
 }
 
+*:link,
+:hover,
+:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
 .App {
   text-align: center;
   font-family: 'Scope One', serif;
